syntax = "proto3";

option csharp_namespace = "Server";

package greet;

import "Protos/hello.proto";
import "Protos/time.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetTime (TimeRequest) returns (TimeReply);
}
