syntax = "proto3";

option csharp_namespace = "Server";

package greet;

message HelloRequest {
  int32 id = 1;
}

message HelloReply {
  string message = 1;
}
